date input gap fix

--- a/GenReports-Tkambio/src/styles/dateinput.scss
+++ b/GenReports-Tkambio/src/styles/dateinput.scss
@@ -4,7 +4,7 @@
     display: flex;
     width: 100%;
 
-    gap: 10px;
+    gap: 14.5px;
 }
 
 .input-date-picker{
